# YukiEngine

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.MD  Yuki.sln  vcpkg.json
.circleci/: config.yml
.github/workflows/: build.yml  build.ymml  cmake-vcpkg.yml  cmake.yml  cmakebuild.yml  codeql-analysis.yml  msbuild.yml
Docs/Developers/: INDEX.MD  vi-intro.md  vi-references.md
Playground/: OpenGLMultithreadTest.cpp  PdhQueryTest.cpp
Stuffs/: aaa.blend  aaa.blend1  aaa.gltf  bbb.blend  bbb.blend1  diamond.fbx  light.fbx  model.fbx  sphere.fbx
YukiCore/: YukiCore.vcxproj  YukiCore.vcxproj.filters
YukiCore/Include/YukiComp/: Camera.hpp  Layer.hpp  Light.hpp  Mesh.hpp  Model.hpp  Scene.hpp  YukiCamera.hpp  YukiComponent.hpp  YukiEntity.hpp  YukiLayer.hpp  YukiLights.hpp  YukiMesh.hpp  YukiModel.hpp  YukiScene.hpp
YukiCore/Include/YukiCore/: Application.hpp  Chrono.hpp  Error.hpp  Graphics.hpp  Headers.hpp  Input.hpp  InputCtrl.hpp  Logger.hpp  Objects.hpp  ThreadPool.hpp  Window.hpp  WindowManager.hpp  YukiApplication.hpp  YukiChrono.hpp  YukiError.hpp  YukiGfxPipeline.h  YukiGraphics.hpp  YukiInputCtrl.hpp  YukiLogger.hpp  YukiObject.hpp  YukiPCH.hpp  YukiThread.hpp  YukiThreadPool.hpp  YukiVE.hpp  YukiWindow.hpp
YukiCore/Include/YukiDebug/: Errors.hpp  Loggers.hpp  YukiError.hpp  YukiLogger.hpp
YukiCore/Include/YukiEntities/: Camera.hpp  Entity.hpp  Scene.hpp
YukiCore/Include/YukiEntity/: Entity.hpp
YukiCore/Include/YukiUtil/: Chrono.hpp  Images.hpp  Randoms.hpp  System.hpp  Utilities.hpp  YukiChrono.hpp  YukiImage.hpp  YukiRandomMachine.hpp  YukiSystem.hpp  YukiUtilities.hpp
YukiCore/Srcs/: Application.cpp  Camera.cpp  Chrono.cpp  DirectionalLight.cpp  Entity.cpp  Error.cpp  Errors.cpp  FlashLight.cpp  GraphicsControl.cpp  GraphicsCtrl.cpp  Headers.cpp  Images.cpp  Input.cpp  InputCtrl.cpp  Layer.cpp  Light.cpp  Logger.cpp  Loggers.cpp  Mesh.cpp  Model.cpp  OGLElementBuffer.cpp  OGLFrameBuffer.cpp  OGLRenderBuffer.cpp  OGLShaderProgram.cpp  OGLTexture.cpp  OGLVertexArray.cpp  OGLVertexBuffer.cpp  Objects.cpp  PYukiApplication.hpp  PYukiCamera.hpp  PYukiDirectionalLight.hpp  PYukiFlashLight.hpp  PYukiGraphicsControl.hpp  PYukiInputControl.hpp  PYukiLayer.hpp  PYukiLogger.hpp  PYukiMesh.hpp  PYukiModel.hpp  PYukiOGLElementBuffer.hpp  PYukiOGLFrameBuffer.hpp  (+58 more)
YukiCore/Srcs/Private/: PApplication.hpp  PCamera.hpp  PDirectionalLight.hpp  PFlashLight.hpp  PGraphicsControl.hpp  PInput.hpp  PLayer.hpp  PLight.hpp  PLogger.hpp  PMesh.hpp  PModel.hpp  POGLElementBuffer.hpp  POGLFrameBuffer.hpp  POGLRenderBuffer.hpp  POGLShaderProgram.hpp  POGLTexture.hpp  POGLVertexArray.hpp  POGLVertexBuffer.hpp  PObjects.hpp  PPointLight.hpp  PRandomMachine.hpp  PScene.hpp  PSystem.hpp  PThreadPool.hpp  PTimer.hpp  PWindow.hpp
YukiDeps/: YukiDeps.vcxproj
YukiDeps/Debug/Libraries/: Irrlicht.lib  assimp-vc143-mtd.lib  bz2d.lib  fmtd.lib  freetyped.lib  glad.lib  zlibd.lib
YukiDeps/Includes/GLFW/: glfw3.h
YukiDeps/Includes/assimp/: Base64.hpp  BaseImporter.h  Bitmap.h  BlobIOSystem.h  ByteSwapper.h  ColladaMetaData.h  CreateAnimMesh.h  DefaultIOStream.h  DefaultIOSystem.h  DefaultLogger.hpp  Exceptional.h  Exporter.hpp  GenericProperty.h  GltfMaterial.h  Hash.h  IOStream.hpp  IOStreamBuffer.h  IOSystem.hpp  Importer.hpp  LineSplitter.h  LogAux.h  LogStream.hpp  Logger.hpp  MathFunctions.h  MemoryIOWrapper.h  NullLogger.hpp  ParsingUtils.h  Profiler.h  ProgressHandler.hpp  RemoveComments.h  SGSpatialSort.h  SceneCombiner.h  SkeletonMeshBuilder.h  SmallVector.h  SmoothingGroups.h  SpatialSort.h  StandardShapes.h  StreamReader.h  StreamWriter.h  StringComparison.h  (+38 more)
YukiDeps/Includes/assimp/Compiler/: poppack1.h  pstdint.h  pushpack1.h
YukiDeps/Includes/assimp/port/AndroidJNI/: AndroidJNIIOSystem.h  BundledAssetIOSystem.h
YukiDeps/Libraries/Debug/: freetype.lib  glad.lib  jpeg.lib  libpng16.lib  turbojpeg.lib  zlib.lib
YukiDeps/Libraries/Release/: freetype.lib  glad.lib
YukiDeps/Release/Libraries/: assimp-vc143-mt.lib  fmt.lib  freetype.lib  glad.lib  glfw3dll.lib
YukiSandbox/: 2022--0102 06-23-40.ylg  2022--0102 06-32-15.ylg  2022--0102 06-33-51.ylg  2022--0111 04-14-33.ylg  YukiSandbox.vcxproj  YukiSandbox.vcxproj.filters
YukiSandbox/Include/: CameraController.hpp  SystemControl.hpp  TestEntity.hpp
YukiSandbox/Srcs/: Main.cpp
YukiShader/: FrameBufferTex.frag  LayerShader.vert  MeshShader.frag  MeshShader.geom  MeshShader.vert  TestShader.frag  TestShader.vert  YukiShader.vcxproj  YukiShader.vcxproj.filters
